MJB SQL DB - Code cleanup & fixes